syntax = "proto3";

package NativeTests;  

service MyService {
  rpc AddNumbers (AddRequest) returns (AddResponse);
}

message AddRequest {
  int32 a = 1;
  int32 b = 2;
}

message AddResponse {
  int32 result = 1;
}